@@ -17,12 +17,13 @@ public class CorsConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         
         // Allow specific origins (update these with your frontend URLs)
-        configuration.setAllowedOriginPatterns(Arrays.asList(
-            "http://localhost:3000",    // React default
-            "http://localhost:5173",    // Vite default
-            "http://localhost:4200",    // Angular default
-            "http://localhost:8080",    // Vue default
-            "https://yourdomain.com"    // Production domain
+        configuration.setAllowedOriginPatterns(List.of(
+            "http://localhost:3000",
+            "http://localhost:5173",
+            "http://localhost:4200",
+            "http://127.0.0.1:3000",
+            "https://yourdomain.com",
+                "*"
         ));
         
         configuration.setAllowedMethods(Arrays.asList(
